Enabled  arbitrary fonts, line numbering; fixed bibliography formatting

--- a/texheader.tex
+++ b/texheader.tex
@@ -2,3 +2,7 @@
 \usepackage{etoolbox}
 \ifundef{\abstract}{}{\patchcmd{\abstract}
     {\quotation}{\quotation\noindent\ignorespaces}{}{}}
+
+% adds line numbering
+\usepackage[right]{lineno}
+\linenumbers
