--- a/texheader.tex
+++ b/texheader.tex
@@ -6,3 +6,15 @@
 % adds line numbering
 \usepackage[right]{lineno}
 \linenumbers
+
+% adds endnotes (uncomment the two lines below then follow next directions)
+% \usepackage{endnotes}
+% \let\footnote=\endnote
+
+% to use endnotes, add the following before the #Works Cited portion of bib-header.md
+% \begingroup
+% \parindent 0pt
+% \parskip 2ex
+% \def\enotesize{\normalsize}
+% \theendnotes
+% \endgroup
